<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layout_top_btn"
        android:background="@drawable/gradient_bg"
        android:layout_alignParentTop="true">
        
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/back_btn"
            android:src="@drawable/ic_chevron_left"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_button"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/now_playing"
            android:textColor="@color/colorAccent"
            android:layout_toEndOf="@+id/back_btn"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:contentDescription="@string/now_playing_text"/>

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/card"
        android:layout_below="@+id/layout_top_btn">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/playingbg"
            android:scaleType="centerCrop"
            android:id="@+id/cover_art"
            android:contentDescription="@string/cover_art"/>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/imageViewGradient"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/image_view_gradient"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_song_name"
        android:id="@+id/song_name"
        android:layout_below="@+id/card"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/song_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_song_artist"
        android:id="@+id/song_artist"
        android:layout_below="@+id/song_name"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/song_artist"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/relative_layout_for_bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/gradient_bg">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_shuffle"
            android:src="@drawable/ic_shuffle_off"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/shuffle_on_off"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_prev"
            android:src="@drawable/ic_skip_previous"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/play_pause"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/skip_to_previous_song" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_pause"
            android:src="@drawable/ic_play"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/play_pause_button_description"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_next"
            android:src="@drawable/ic_skip_next"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play_pause"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/skip_to_next_song" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_repeat"
            android:src="@drawable/ic_repeat_off"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/repeat_on_off"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/relative_layout_for_bottom"
        android:layout_marginBottom="15dp"
        android:id="@+id/seek_bar_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:id="@+id/durationPlayed"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_28"
            android:id="@+id/durationTotal"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:thumbTint="@color/white"
            android:contentDescription="@string/seek_bar"/>

    </RelativeLayout>

</RelativeLayout>