<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/item_root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingHorizontal="8dp"
    android:orientation="horizontal"
    android:background="@color/VeryLightOrange">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_song_art_image_view_parent"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:background="@color/cardview_dark_background">

        <ImageView
            android:id="@+id/music_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_album_24px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/music_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/music_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nevers_road"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/witt_lowry"
            android:textSize="13sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>